# netbox-topology-icons

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: release.yml
netbox_topology_icons/: __init__.py
