[tool.poetry]
name = "netbox-topology-icons"
version = "0.2.0"
description = "Plugin to add icons to topology plugin"
authors = ["Victor Gorchilov <victor.gorchilov@x3me.net>"]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
