[project]
name = "netbox-topology-icons"
dynamic = ["version"]
description = "Plugin to add icons to netbox topology plugin"
authors = [
    { name = "Victor Gorchilov", email = "victor.gorchilov@x3me.net" },
    { name = "Victor Gorchilov", email = "victor.gorchilov@x3me.net" },
]
dependencies = []
readme = "README.md"
license = { text = "MIT" }
requires-python = ""

[project.urls]

[tool.pdm]
version = { source = "file", path = "netbox_topology_icons/__init__.py" }

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
